@@ -1,6 +1,6 @@
 Package: optextras
-Version: 2013-8.20
-Date: 2013-08-20
+Version: 2013-9.11
+Date: 2013-09-11
 Title: A set of tools to support optimization methods
       (function minimization with at most bounds and masks).
 Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
